# backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  state.rs
src/controllers/: mod.rs  routes.rs
src/controllers/auth/: login.rs  mod.rs  register.rs  routes.rs
src/controllers/base/: base.rs  mod.rs  routes.rs
src/controllers/global/: mod.rs  routes.rs  statistics.rs
src/controllers/oauth/: routes.rs
src/controllers/upload/: mod.rs  routes.rs  upload.rs
src/controllers/user/: config.rs  delete_user.rs  gallery.rs  get_user.rs  mod.rs  routes.rs
src/controllers/user/me/: delete.rs  delete_user.rs  get.rs  get_user.rs  mod.rs
src/db/: db.rs
src/entity/: config.rs  domain.rs  invite.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  upload.rs  user.rs
src/routes/auth/: routes.rs
src/routes/user/: routes.rs
src/typings/: auth.rs  mod.rs  response.rs  upload.rs
src/util/: jwt.rs  mod.rs  response.rs  string.rs  user.rs
