[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
dotenv = "0.15.0"

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.8.0", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false }
bcrypt = "0.13"
uuid = "1.1.2"
