[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-multipart = "0.4"
dotenv = "0.15.0"

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.8.0", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false }
bcrypt = "0.13"
actix-identity = "0.4"
jsonwebtoken = "8"
async-std = "1.12.0"
fs_extra = "1.2.0"
actix-cors = "0.6.1"
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
actix-multipart-extract = "0.1"
sha2 = "0.10"
tokio = { version = "1.10.0", features = ["full"] }
random-string = "1.0"
concat-string = "1.0.1"