[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-multipart = "0.4"
dotenv = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.8.0", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false }
actix-identity = "0.5.2"
jsonwebtoken = "8"
async-std = "1.12.0"
fs_extra = "1.2.0"
uuid = { version = "1", features = ["v4"] }
actix-multipart-extract = "0.1"
sha2 = "0.10"
tokio = { version = "1.10.0", features = ["full"] }
random-string = "1.0"
concat-string = "1.0.1"
rand = "0.8.5"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
derive_more = "0.99.17"
actix-session = { version = "0.7.1", features = ["redis-rs-session"] }
